# librevault

./: CMakeLists.txt  conanfile.py
components/meta/: CMakeLists.txt
components/protocol-protobuf/: CMakeLists.txt  EncryptedData.proto  InodeDirectory.proto  InodeFile.proto  InodeGeneric.proto  InodeMetadataGeneric.proto  InodeSymlink.proto  Meta_s.proto  Protocol.proto  Snapshot.proto  StrongHash.proto  V1Protocol.proto
components/secret/: Secret.h
components/snapshot/: CMakeLists.txt  ChunkInfo.cpp  ChunkInfo.h  EncryptedData.cpp  EncryptedData.h  Inode.cpp  Inode.h  InodeGeneric.cpp  InodeGeneric.h  Snapshot.cpp  Snapshot.h
components/snapshotcreator/: CMakeLists.txt  IChunkStorage.h  IInodeStorage.h  ISnapshotStorage.h  InodeScanner.cpp  InodeScanner.h  SnapshotCreator.cpp  SnapshotCreator.h  SnapshotReader.cpp  SnapshotReader.h  TimestampGranularity.h  main.cpp
daemon/: CMakeLists.txt
daemon/discovery/multicast/: MulticastGroup.cpp  MulticastProvider.cpp
